fix for the partial-page issue on firefox

--- a/web-ui/src/main/resources/catalog/views/default/less/vl.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/vl.less
@@ -55,3 +55,8 @@ legend[data-gn-slide-toggle]:before {
 .gn-facet-header{
   text-transform: uppercase;
 }
+
+// fix for a rendering issue on firefox (https://agiv.visualstudio.com/Metadata/_git/MetadataGeonetwork/pullrequest/29215)
+.vl-break-inside-auto {
+  break-inside: auto !important;
+}
